--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
             <form action="#" class="subscribe__form">
                <input autocomplete="off" type="text" name="form[]" id="" class="subscribe__input _req _email" placeholder="Enter your email">
                <button type="submit" class="subscribe__button _icon-send"></button>
-               <div class="subscribe__error">Ошибка</div>
+               <div class="subscribe__error">Error</div>
             </form>
          </div>
       </div>
